# md2pptx

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  OfficeTheme.pptx  README.md  example.md  pyproject.toml
.github/workflows/: ci.yml
md2pptx/: __init__.py  __main__.py  cli.py  flow.py  ir.py  parser.py  pdf.py  render.py
src/: flow.py  ir.py  md2pptx  parser.py  render.py  thmx2pptx.py
