[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "md2pptx"
dynamic = ["version"]
description = "Markdown と PowerPoint テーマ（thmx/pptx）から発表スライド（pptx）を生成するツール"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Toshihiko SHIMOKAWA" }]
keywords = ["markdown", "powerpoint", "pptx", "slides", "presentation"]
dependencies = [
    "python-pptx>=1.0",
    "PyYAML>=6",
]

[project.urls]
Repository = "https://github.com/toshi0806/md2pptx"

[project.scripts]
md2pptx = "md2pptx.cli:main"

[tool.setuptools]
packages = ["md2pptx"]

# バージョンは md2pptx/__init__.py の __version__ を単一の情報源にする（二重管理を避ける）．
[tool.setuptools.dynamic]
version = { attr = "md2pptx.__version__" }
