[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "md2pptx"
dynamic = ["version"]
description = "Markdown と PowerPoint テーマ（thmx/pptx）から発表スライド（pptx）を生成するツール"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Toshihiko SHIMOKAWA" }]
keywords = ["markdown", "powerpoint", "pptx", "slides", "presentation"]
dependencies = [
    "python-pptx>=1.0",
    "PyYAML>=6",
]

[project.optional-dependencies]
# 型チェック用（実行には不要）．CI と手元で同じものを入れる．
dev = [
    "mypy>=1.11",
    "types-PyYAML>=6",
]

[project.urls]
Repository = "https://github.com/toshi0806/md2pptx"

[project.scripts]
md2pptx = "md2pptx.cli:main"

[tool.setuptools]
packages = ["md2pptx"]

# バージョンは md2pptx/__init__.py の __version__ を単一の情報源にする（二重管理を避ける）．
[tool.setuptools.dynamic]
version = { attr = "md2pptx.__version__" }

[tool.mypy]
files = ["md2pptx"]
# サポート最古の版として解析する（requires-python と揃える）．
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
# 未注釈の関数の中身も見る（描画ヘルパーは注釈が薄いので取りこぼしを減らす）．
check_untyped_defs = true
